--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -1,5 +1,5 @@
 <div
-    class=" px-10 sm:absolute sm:inset-0 flex flex-col px-10  flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    class=" px-10 sm:absolute sm:inset-0 flex flex-col px-10  flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="row py-3">
         <div class="col-lg-12 col-sm-12">
             <div class="heading">{{getTitle()}}</div>
@@ -7,7 +7,7 @@
 
     </div>
     <!-- Header -->
-    <div class="flex flex-auto overflow-hidden pb-4" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-y-scroll overflow-x-hidden pb-4" style="flex-direction: column;">
         <form [formGroup]="customerInfo" class="kt-form kt-form--group-seperator-dashed">
             <div class="kt-form">
                 <div class="kt-portlet__body" style="margin-top: 5px">
