--- a/src/app/modules/customer/pending-customers/pending-customers.component.html
+++ b/src/app/modules/customer/pending-customers/pending-customers.component.html
@@ -65,8 +65,7 @@
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-                        <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                                aria-expanded="false"
+                        <button 
                                 class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500"
                                 mat-raised-button
                                 type="button"
