--- a/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
@@ -2,7 +2,7 @@
   <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
       <div class="kt-portlet__head-label">
-        <h3 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">>Loan Case Inquiry</h3>
+        <h3 class="heading">>Loan Case Inquiry</h3>
       </div>
     </div>
     <div>
