--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -1,5 +1,5 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">Calculate DBR</div>
+<div class=" pt-3 px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+  <div class="heading">Calculate DBR</div>
   <!-- Header -->
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8">
 
@@ -9,7 +9,7 @@
   <div class="flex flex-auto overflow-y-scroll">
 
     <!-- Products list -->
-    <div class="flex flex-auto overflow-y-scroll mx-10" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
       <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
         <div class="kt-portlet__head-label">
           <h5 class="kt-portlet__head-title" style="font-size: 18px !important;">Income</h5>
