--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">Applying ORR</div>
+  <div class="heading">Applying ORR</div>
   <!-- Header -->
   <div class="pt-4" [formGroup]="ORRForm">
 
@@ -54,9 +54,9 @@
   </div>
 
   </div>
-  <div class="flex flex-auto overflow-y-scroll">
-    <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
+  <div class="flex flex-auto overflow-y-scroll overflow-x-hidden ">
+    <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-x-hidden sm:overflow-y-auto">
       
         <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationORR.length>0">
           <div class="col-lg-12">
@@ -89,7 +89,7 @@
           </div>
         </div>
 
-        <div class="form-group kt-form__group row" *ngIf="dataFetched && CustomerORR.length>0">
+        <div class="form-group kt-form__group row " *ngIf="dataFetched && CustomerORR.length>0">
           <div class="col-lg-12">
             <span>Customers</span>
             <div class="table-responsive">
