--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -56,11 +56,11 @@
   </div>
   <div class="flex flex-auto overflow-y-scroll overflow-x-hidden ">
     <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-x-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-2 overflow-x-hidden sm:overflow-y-auto">
       
         <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationORR.length>0">
           <div class="col-lg-12">
-            <h3>Application</h3>
+            <h3 class="heading">Application</h3>
             <div class="table-responsive">
               <table class="table table-striped">
                 <thead>
@@ -91,7 +91,7 @@
 
         <div class="form-group kt-form__group row " *ngIf="dataFetched && CustomerORR.length>0">
           <div class="col-lg-12">
-            <span>Customers</span>
+            <span class="heading">Customers</span>
             <div class="table-responsive">
               <table class="table table-striped">
                 <thead>
@@ -145,7 +145,7 @@
 
         <div class="form-group kt-form__group row" *ngIf="dataFetched && GlProposalORR && GlProposalORR.length>0">
           <div class="col-lg-12">
-            <h3>Proposals/GL</h3>
+            <h3 class="heading">Proposals/GL</h3>
             <div class="table-responsive">
               <table class="table table-striped">
                 <thead>
@@ -205,21 +205,22 @@
         </div>
      
 
-        <div class="form-group kt-form__group row">
-          <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button style="background-color: #01671B;" mat-raised-button color="primary" (click)="save()" [disabled]="submitted"><mat-icon class="mr-2">save</mat-icon>{{showFinalOrrTable?"Submit":"Save"}}</button>
-            <button mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted"><mat-icon>navigate_next</mat-icon>{{showFinalOrrTable?"Back":"Next"}}</button>
-            &nbsp;&nbsp;&nbsp;&nbsp;<span id="llcInquiryText" (click)="goToPendingList()"><b>Pending List</b></span>
-            <!--<button mat-raised-button color="primary" class="ml-2">Delete</button>-->
-          </div>
-        </div>
+
 
       </div>
 
     </div>
+    
 
   </div>
-
+  <div class="form-group kt-form__group mb-2 row">
+    <div class="col-lg-12 kt-margin-bottom-20-mobile">
+      <button class="bg-green" mat-raised-button color="primary" (click)="save()" [disabled]="submitted"><mat-icon class="mr-2">save</mat-icon>{{showFinalOrrTable?"Submit":"Save"}}</button>
+      <button mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted"><mat-icon>navigate_next</mat-icon>{{showFinalOrrTable?"Back":"Next"}}</button>
+      &nbsp;&nbsp;&nbsp;&nbsp;<span id="llcInquiryText" class="cursor-pointer" (click)="goToPendingList()"><b>Pending List</b></span>
+      <!--<button mat-raised-button color="primary" class="ml-2">Delete</button>-->
+    </div>
+  </div>
 </div>
 
 
