--- a/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
+++ b/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
@@ -18,8 +18,8 @@
 </div>
 
 <div class="collapse show" id="collapseExample">
-  <div class="card card-body">
-    <div class="row">
+  <div class="card card-body" [formGroup]="loanSearch">
+    <div class="row" >
       <div class="col-lg-3 col-sm-12">
       <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
         <mat-label>Application Date(ddMMyyyy)</mat-label>
@@ -53,8 +53,8 @@
         <mat-label>Loan Case#</mat-label>
         <input matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
       </mat-form-field>
-  
-      
+
+
     </div>
   </div>
   <div class="row">
@@ -67,7 +67,7 @@
   </div>
     </div>
   </div>
- </div> 
+ </div>
 
   <!-- Header -->
   <div
