--- a/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
+++ b/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
@@ -1,4 +1,4 @@
-<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
   <div class="row pt-3">
     <div class="col-lg-9 col-sm-12">
@@ -79,8 +79,8 @@
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
-      <mat-table class="lmat-elevation-z8"
+      <div class="flex flex-col flex-auto sm:mb-2 overflow-scroll sm:overflow-y-auto border shadow-xs rounded-sm bg-gray-50" [style.height]="gridHeight">
+      <mat-table class="lmat-elevation-z8 "
                    #table
                    [dataSource]="dataSource"
                    matSort
