--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -1,5 +1,5 @@
 <div
-    class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
@@ -73,7 +73,7 @@
 
     <!-- Header -->
     <div
-        [formGroup]="utilizationSearch" class="pt-2">
+        [formGroup]="utilizationSearch">
 
 
         <!-- Main -->
@@ -81,7 +81,7 @@
 
             <!-- Products list -->
             <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-                <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
+                <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto" [style.height]="gridHeight">
                     <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                                matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
