--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
@@ -163,8 +163,8 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
               </mat-table>
 
-              <div class="mat-table__message" *ngIf="!loading ">No records found</div>
-              <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+<!--              <div class="mat-table__message" *ngIf="!loading ">No records found</div>-->
+<!--              <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
             </div>
 
             <div class="mat-table__bottom">
