--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -1,5 +1,5 @@
 <div
-    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent"
+    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll bg-card dark:bg-transparent"
     [formGroup]="customerForm">
     <div class="text-3xl font-extrabold tracking-tight mt-6 pb-2 border-b mb-2 border-green-500 p-2"
          style="background-color: #f6fcf8;">Loan Utilization
@@ -7,7 +7,7 @@
 
 
     <!-- Header -->
-    <div class="flex flex-auto px-0 overflow-x-hidden" style="flex-direction: column; overflow-y: scroll">
+    <div class="flex flex-auto px-0" style="flex-direction: column; ">
         <div>
 
 
@@ -195,19 +195,18 @@
         <!-- images -->
         <div class="kt-portlet__head kt-portlet__head__custom" style="width: 100%">
             <div class="kt-portlet__head-label">
-                <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
-                     style="background-color: #f6fcf8;">Attach Images
+                <div class="heading">Attach Images
                 </div>
                 <mat-error *ngIf="hasError('file', 'required')">Must Contain a Image<strong>required</strong>
                 </mat-error>
             </div>
         </div>
 
-        <div>
-
+        <div class="row">
+            <div class="col-lg-12 col-sm-12">
             <input *ngIf="!viewonly" (click)="ifResetRequired()" type='file' formControlName="file"
                    accept="image/jpg, image/jpeg" (change)="onSelectFile($event)"/>
-            <div class="mt-4" *ngIf="imageUrl.length>0 && visible"
+            <div class="mt-4 overflow-scroll" *ngIf="imageUrl.length>0 && visible"
                  style="display: flex !important;flex-direction: row !important;flex-wrap: wrap !important;gap: 10px">
                 <div *ngFor='let url of imageUrl; let i = index'>
                     <!-- <button *ngIf="!viewonly" (click)="removeImage(url,i)">
@@ -230,6 +229,7 @@
                 </div>
             </div>
 
+        </div>
         </div>
         <!--        Video-->
         <div class="kt-portlet__head kt-portlet__head__custom">
