--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
@@ -1,8 +1,11 @@
 
 <div class="kt-portlet">
   <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
-    <div class="kt-portlet__head-label">
-      <h3 class="kt-portlet__head-title">{{getTitle()}}</h3>
+    <div class="kt-portlet__head-label flex">
+      <h3 class="heading w-11/12">{{getTitle()}}</h3>
+      <button type="button" class="button-red w-1/12 text-end"  cdkFocusInitial (click)="onCloseClick()">
+        <mat-icon class="text-danger">cancel</mat-icon>
+      </button>
     </div>
   </div>
   <form [formGroup]="glSchemeCropConfigForm" class="kt-form kt-form--group-seperator-dashed">
@@ -110,8 +113,9 @@
         <div class="form-group kt-form__group row">
           <div class="col-lg-12">
 
-            <div class="mat-table__wrapper mat-elevation-z8">
-              <mat-table class="lmat-elevation-z8"
+            <div class="mat-table__wrapper overflow-scroll " >
+              <mat-table 
+              [style.height]="gridHeight"
                          #table
                          [dataSource]="dataSource | paginate: {itemsPerPage: size, currentPage: pageIndex,totalItems: length}"
                          matSort
@@ -161,10 +165,12 @@
                 <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
 
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                <div class="mat-table__message" *ngIf="!loading ">No records found</div>
+                <div class="mat-table__message" *ngIf="loading">Please wait....</div>
               </mat-table>
 
-<!--              <div class="mat-table__message" *ngIf="!loading ">No records found</div>-->
-<!--              <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
+
+
             </div>
 
             <div class="mat-table__bottom">
@@ -245,9 +251,9 @@
 
 
 
-<ngx-spinner bdColor="rgba(51,51,51,0.8)"
+<!-- <ngx-spinner bdColor="rgba(51,51,51,0.8)"
              size="medium"
              color="#ecbd00"
              type="ball-scale-multiple">
   <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner>
+</ngx-spinner> -->
