--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.scss
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.scss
@@ -51,3 +51,15 @@ table > thead {
   color: #fefefe;
   cursor: default;
 }*/
+@media only screen and (max-width: 600px){
+.mat-row, .mat-header-row {
+    display: inline-flex;
+    position: sticky;
+}
+}
+@media only screen and (max-width: 600px){
+.mat-table {
+    overflow-x: scroll;
+    max-width: 100%;
+}
+}
