--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -662,10 +662,10 @@
 <!-- Documents Attached End -->
 
 
-<ngx-spinner bdColor="rgba(51,51,51,0.8)"
+<!-- <ngx-spinner bdColor="rgba(51,51,51,0.8)"
              size="medium"
              color="#ecbd00"
              type="ball-scale-multiple">
   <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner>
+</ngx-spinner> -->
 
