--- a/src/app/modules/loan/cl-securities/cl-securities.component.html
+++ b/src/app/modules/loan/cl-securities/cl-securities.component.html
@@ -156,12 +156,12 @@
     </div>
   </div>
 </div>
-<ngx-spinner bdColor="rgba(51,51,51,0.8)"
+<!-- <ngx-spinner bdColor="rgba(51,51,51,0.8)"
              size="medium"
              color="#ecbd00"
              type="ball-scale-multiple">
   <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner>
+</ngx-spinner> -->
 
 
 
