--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -112,7 +112,7 @@
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mt-2">
           <mat-checkbox class="example-margin" [(ngModel)]="isCheckedEquity" [ngModelOptions]="{standalone: true}">Check Equity</mat-checkbox>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-8 col-sm-12 kt-margin-bottom-20-mobile">
           <mat-label class="customMatLabel mb-4"><b>Borrower Agreed to Pay Insurance For (Opt) Crops</b><strong class="matMandatory">*</strong></mat-label>
           &nbsp;
           <mat-radio-group class="mt-4" aria-label="Select an option">
@@ -132,8 +132,8 @@
             </div>
 
         </div>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-3 mt-1p">
+      <div class="form-group kt-form__group row pb-2">
+        <div class="col-lg-12 mt-1p">
           <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSavePurpose()">
             <mat-icon class="mr-2">save</mat-icon> Save
           </button>
