--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -4,12 +4,12 @@
 
       <div class="form-group kt-form__group row">
         <div class="col-lg-4 col-sm-12">
-          <mat-form-field class="mat-form-field-fluid w-7/12" appearance="outline">
+          <mat-form-field class="mat-form-field-fluid w-6/12" appearance="outline">
             <mat-label class="customMatLabel">GL Code <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter GL Code" formControlName="GlSubID" appNumberOnly />
             <mat-error *ngIf="hasError('GlSubID', 'required')">GL Code <strong>required</strong></mat-error>
           </mat-form-field>
-          <button type="button" (click)="GlschemeCropConfiguration()" class=" w-4/12 mx-2 btn btn-primary" mat-raised-button color="primary">
+          <button type="button" (click)="GlschemeCropConfiguration()" class=" w-5/12 ml-1 btn btn-primary" mat-raised-button color="primary">
             Get GL Code #
           </button>
         </div>
