--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -85,8 +85,7 @@
         </div>
         <div class="col-lg-12 tab-box">
 
-            <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
-                 style="background-color: #f6fcf8;">Loan Application
+            <div class="heading">Loan Application
             </div>
             <mat-tab-group mat-align-tabs="start">
 
