--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="applicationHeaderForm" class="kt-form kt-form--group-seperator-dashed">
   <div class="kt-form">
     <div class="kt-portlet__body">
+      <app-zone-branch-circle [form]="applicationHeaderForm" [should_show_circle]="false"
+      (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+      <div class="form-group kt-form__group flex " style="flex-wrap: wrap;">
 
-      <div class="form-group kt-form__group row">
-          <app-zone-branch-circle [form]="applicationHeaderForm" [should_show_circle]="false"
-                                  (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-        <div class="col-lg-4 col-sm-12  kt-margin-bottom-20-mobile">
+        <div class="col-lg-4 col-sm-12  kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Application Date <strong class="matMandatory">*</strong></mat-label>
             <input readonly="readonly" matInput [matDatepicker]="picker3" formControlName="AppDate" [max]="today" autocomplete="off">
@@ -15,9 +15,9 @@
           </mat-form-field>
         </div>
 
-      </div>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+
+
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Loan Type <strong class="matMandatory">*</strong></mat-label>
             <mat-select formControlName="DevProdFlag" (selectionChange)="onChangeLoanType($event)" >
@@ -32,14 +32,14 @@
             <mat-error *ngIf="hasError('DevProdFlag', 'required')">LoanType <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Development Loan Amount <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter Development Loan Amount" formControlName="DevAmount" appNumberOnly />
             <mat-error *ngIf="hasError('DevAmount', 'required')">Development Loan Amount <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Production Loan Amount <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter Production Loan Amount" formControlName="ProdAmount" appNumberOnly />
@@ -47,19 +47,21 @@
           </mat-form-field>
         </div>
 
-
-      </div>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-7/12" appearance="outline">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <input matInput placeholder="Enter Lc Old No" formControlName="LoanCaseNo" autocomplete="off" readonly/>
           </mat-form-field>
 
-          <button [disabled]="isCheckLcInProgress" type="button" class=" mx-2 btn btn-primary mt-10p w-4/12" mat-raised-button color="primary" (click)="getLcNoAutoAssignedByApi()">
+        </div>
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
+
+
+          <button [disabled]="isCheckLcInProgress" type="button" class="mt-2 btn btn-primary w-full" mat-raised-button color="primary" (click)="getLcNoAutoAssignedByApi()">
             Check LC #
           </button>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Loan Category <strong class="matMandatory">*</strong></mat-label>
             <mat-select formControlName="CategoryID">
@@ -74,7 +76,7 @@
             <mat-error *ngIf="hasError('CategoryID', 'required')">Loan Category <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">LA File/booklet No <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter Booklet No" formControlName="AppNumberManual" autocomplete="off" />
@@ -83,17 +85,13 @@
         </div>
 
 
-
-
-      </div>
-      <div class="form-group kt-form__group row">
 <!--        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">-->
 <!--          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
 <!--            <input matInput placeholder="LC NO" formControlName="LoanAutoNo" readonly="readonly" autocomplete="off" />-->
 <!--            <mat-error *ngIf="hasError('LoanAutoNo', 'required')">"LC NO <strong>required</strong></mat-error>-->
 <!--          </mat-form-field>-->
 <!--        </div>-->
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
 
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Circle <strong class="matMandatory">*</strong></mat-label>
@@ -110,7 +108,7 @@
             <mat-error *ngIf="hasError('CircleID', 'required')">Circle <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Deposit Acc# <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter Deposit Account" formControlName="RefDepositAcc" maxlength="14" autocomplete="off" />
@@ -118,7 +116,7 @@
             <mat-error *ngIf="hasError('RefDepositAcc', 'minLength')">Deposit Account minimum length <strong>14</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-4  col-sm-12 kt-margin-bottom-20-mobile">
+        <div class="col-lg-4  col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Reference Number(PITB) </mat-label>
             <input matInput placeholder="Enter Reference Number(PITB)" formControlName="ApplicantionTitle" />
@@ -126,13 +124,13 @@
           </mat-form-field>
         </div>
 
-      </div>
+</div>
 
     </div>
   </div>
 </form>
-<div class="form-group kt-form__group row">
-  <div class="col-lg-12 mt-1p">
+<div class="form-group kt-form__group row ml-1">
+  <div class="col-lg-12">
     <button style="background-color: #01671B;" [disabled]="isSaveApplicationHeaderInProgress" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveApplicationHeader()">
       <mat-icon class="mr-2">save</mat-icon> Save
     </button>
